review, updated css file

--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@ body {
 
 /* main, first section */
 
-.imageWeb3 {
+/* .imageWeb3 {
     width: 72rem;
-}
+} */
 
 .firstSection {
     margin: 5rem auto 7rem;
